--- a/numbers/css/numbers.css
+++ b/numbers/css/numbers.css
@@ -17,13 +17,72 @@
     text-align: center;
 }
 
-.did_ratecenter {
-    float: left;
-    margin-left: 5px;
-    margin-top: 5px;
-    width: 20%;
+.needCreditAdj {
+    height: 11px;
+    margin: 2px 0 0 !important;
 }
 
-.needCreditAdj {
-    height: 12px;
+#foundDIDList {
+    padding: 0 150px;
+}
+
+#addDIDForm {
+    overflow: auto;
+    max-width 20em;
+    max-height: 15em;
+    border: 1px solid #A6A6A6;
+}
+
+#addDIDForm .column:not(:last-child) {
+    border-right: 1px solid #A6A6A6;
+}
+
+#addDIDForm .column {
+    float: left;
+    text-align: center;
+    height: 25px;
+    line-height: 25px;
+}
+
+#addDIDForm .column.first {
+    width: 150px;
+    text-align:right;
+    padding-right: 25px;
+}
+
+#addDIDForm .column.second {
+    width: 50px;
+}
+
+#addDIDForm .column.third {
+    width: 185px;
+}
+
+#addDIDForm .column.third .did_ratecenter{
+    line-height: 25px;
+}
+
+#addDIDForm .column.fourth {
+    padding-left: 25px;
+    text-align: 25px;
+}
+
+#addDIDForm .row {
+    height: 25px
+}
+
+#addDIDForm .row:not(:last-child) {
+    border-bottom: 1px solid #A6A6A6;
+}
+
+#addDIDForm .row:nth-child(odd) {
+    background-color: #eeeeee;
+}
+
+#addDIDForm .row:nth-child(even) {
+    background-color: #dddddd;
+}
+
+#addDIDForm .row .select_number {
+    margin-left: 16px;
 }
