WINKSTART-785: Few changes to Trunkstore css.

--- a/sipservice/css/popups.css
+++ b/sipservice/css/popups.css
@@ -237,12 +237,10 @@
 .myform input {
     float: left;
     font-size: 12px;
-    padding: 4px 2px;
+    padding: 2px;
     border: solid 1px #09F;
     width: 200px;
-    margin: 2px 0 5px 10px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
+    margin: 0 0 10px 5px;
     border-radius: 5px;
 }
 
