--- a/sipservice/css/style.css
+++ b/sipservice/css/style.css
@@ -40,10 +40,11 @@
 #control_area #my_services { width:423px; margin:0 0 15px 20px; }
 #control_area #my_services .title { width:363px; height:23px; background:url(../images/bg_trunks_header.jpg) top left no-repeat; color:#fff; padding:6px 0 0 60px;  }
 #control_area #my_services .info { background:url(../images/bg_trunk_li.jpg) top left no-repeat; width:423px; height:45px; color:#4e4d4d; padding-top:0em; }
-#control_area #my_services .info .amount { float:left; font-size:27px; margin:10px 0 0 30px; }
+#control_area #my_services .info .amount { float:left; font-size:27px; margin:20px 0 0 30px; }
 #control_area #my_services .info .ppm { float:left; font-size:13px; font-weight:bold; margin:22px 0 0 10px; }
-#control_area #my_services .info .channels.num { float:left; font-size:27px; margin:10px 0 0 30px; }
-#control_area #my_services .info .channels.detail { float:left; font-size:12px; font-weight:bold; margin:10px 0 0 10px; }
+#control_area #my_services .info .channels.num { float:left; font-size:23px; margin:20px 0 0 20px; }
+#control_area #my_services .info .channels.num:first-child { margin-left: 30px; }
+#control_area #my_services .info .channels.detail { float:left; font-size:12px; font-weight:bold; margin:20px 0 0 5px; }
 #control_area #my_services .info .channels.detail em {font-weight:normal; font-size:11px; }
 #control_area #my_services .info .e_num { float:left; font-size:27px; margin:10px 0 0 30px; }
 #control_area #my_services .info .e_detail { float:left; font-size:12px; font-weight:bold; margin:24px 0 0 10px; }
@@ -491,7 +492,7 @@ input[type="search"] {
 
 }
 
-#addCredsSpan {float: right; /*padding-right:2em */ }
+#addCredsSpan {float: right; margin-right: 20px;/*padding-right:2em */ }
 
 /*.no_cc_warning:before {content: url(/../images/warning-icon_sm.png); vertical-align: middle;}*/
 .no_cc_warning { font-size: 14px; }
@@ -512,9 +513,4 @@ input[type="search"] {
     -moz-border-radius: 0.8em;
     padding: 0px .8em;
 
-}
-
-#edit_server .icon {
-    margin-left: -20px;
-    margin-top: -10px;
 }
