--- a/connect/css/trunkstore_popups.css
+++ b/connect/css/trunkstore_popups.css
@@ -10,6 +10,13 @@
 	border-radius: 5px;
 }
 
+.trunkstore_popup h2 {
+    padding: 10px 0px 15px 5px;
+    color: #333333;
+    font-weight: bold;
+    font-size: 16px;
+}
+
 .trunkstore_popup h3 {
 	font-size: 14.5px;
     font-weight: bold;
