--- a/connect/css/trunkstore_popups.css
+++ b/connect/css/trunkstore_popups.css
@@ -18,6 +18,15 @@
     border: 1px solid #0be;
 }
 
+.trunkstore_popup a {
+    text-decoration: underline;
+    color: #0be;
+}
+
+.trunkstore_popup a:hover {
+    color: #05addc;
+}
+
 .trunkstore_popup h2 {
     padding: 10px 0px 5px 5px;
     color: #333333;
@@ -36,6 +45,15 @@
 	text-align: center;
 }
 
+.trunkstore_popup .note_icon {
+    background: url('../images/note.png') no-repeat -2px transparent;
+    width: 12px;
+    height: 12px;
+    margin-right: 5px;
+    display: inline-block;
+    margin-bottom: -2px;
+}
+
 .trunkstore_popup p.note_box {
 	background-color: #E7E7E7;
     padding: 15px 10px;
@@ -45,6 +63,13 @@
     margin-top: 10px;
     border: 2px solid #A6A6A6;
     text-align: center;
+}
+
+.trunkstore_popup .buttons {
+    text-align: right;
+    padding: 15px 0 0;
+    width: auto;
+    height: 30px;
 }
 
 .trunkstore_popup .buttons_centered {
