WINKSTART-785: Almost done popups for Trunkstore

--- a/connect/css/trunkstore_popups.css
+++ b/connect/css/trunkstore_popups.css
@@ -48,12 +48,10 @@
 }
 
 .trunkstore_popup .note_icon {
-    background: url('../images/note.png') no-repeat -2px transparent;
-    width: 12px;
-    height: 12px;
-    margin-right: 5px;
+    background: url('../images/note.png') no-repeat;
+    width: 23px;
+    height: 23px;
     display: inline-block;
-    margin-bottom: -2px;
 }
 
 .trunkstore_popup p.note_box {
@@ -74,6 +72,49 @@
     line-height: 16px;
     display: block;
     font-weight: normal;
+}
+
+.trunkstore_popup .fancy_help {
+    margin-top: 15px;
+    text-align: left;
+    font-size: 11px;
+    line-height: 16px;
+    font-weight: normal;
+    margin: 5px 2% 5px 2%;
+    padding: 1%;
+    display: inline-block;
+    width: 93%;
+}
+
+.trunkstore_popup .fancy_help.small {
+    width: 250px;
+}
+
+.trunkstore_popup .fancy_help.small .wrapper_icon {
+    width: 23px;
+}
+
+.trunkstore_popup .fancy_help.small .help_text {
+    width: 220px;
+}
+
+.trunkstore_popup .fancy_help.border {
+    background: #ddd;
+    border: 1px solid #adadad;
+}
+
+.trunkstore_popup .fancy_help .wrapper_icon {
+    text-align: center;
+    padding-right: 1%;
+    width: 5%;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.trunkstore_popup .fancy_help .help_text {
+    width: 93%;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .trunkstore_popup .buttons {
