--- a/numbers/css/numbers.css
+++ b/numbers/css/numbers.css
@@ -110,13 +110,18 @@
 #edit_number .content .stats .stats_left{
     float: left;
     width: 70%;
-    margin-top: 30px;
+    margin-top: 28px;
 }
 
 #edit_number .content .stats .stats_right{
     float: left;
     width: 30%;
-    margin-top: 30px;
+    margin-top: 28px;
+}
+
+#edit_number .content .stats .stats_right .submit_btn {
+    margin-left: 0;
+    width: 71px;
 }
 
 #edit_number .content .stats .title_stats {
@@ -189,7 +194,7 @@
 #port_number .wizard_buttons {
     height: 30px;
     text-align: right;
-    padding: 25px 20px 0;
+    padding: 15px 20px 0;
 }
 
 #port_number .wizard_buttons .prev_step {
@@ -330,6 +335,10 @@
     width: 48%;
 }
 
+#port_number .step_div .left_part.text_only {
+    line-height: 22px;
+}
+
 #port_number .step_div .right_part {
     float: left;
     text-align: left;
@@ -343,9 +352,14 @@
     font-weight: bold;
 }
 
+#port_number .step_div .split_div.last {
+    margin-bottom: 20px;
+}
+
 #port_number .step_div.first .split_div {
     width: 100%;
     margin-top: 20px;
+    min-height: 30px;
 }
 
 #port_number .step_div.first .split_div .left_part {
@@ -363,12 +377,12 @@
 
 #port_number .step_div.first .numbers_text {
     height: 160px;
-    width: 230px;
+    width: 200px;
 }
 
 #port_number .step_div.first .carrier_dropdown {
     margin-top: 5px;
-    width: 235px;
+    width: 205px;
     max-width: 235px;
 }
 
@@ -426,7 +440,7 @@
 #port_number .step_div.third .loa_block .upload_block {
     font-size: 11px;
     float: left;
-    margin: 10px;
+    margin: 10px 0 0 0;
     width: 100%;
 }
 
@@ -451,25 +465,148 @@
 }
 
 /* FAILOVER POPUP */
-
-.failover label {
-    font-weight: bold;
+.trunkstore_popup.failover {
+    padding: 0px;
 }
 
-.failover form{
+.trunkstore_popup.failover form{
     margin-bottom: 0;
+    padding: 15px 5px 10px 5px;
+}
+
+.trunkstore_popup.failover .header {
+    background: url('images/failover_header.png') no-repeat center #444;
+    width: 640px;
+    height: 136px;
+}
+
+.trunkstore_popup.failover .header.number {
+    background: url('images/failover_e164.png') no-repeat center #444;
+}
+
+.trunkstore_popup.failover .header.sip {
+    background: url('images/failover_sip.png') no-repeat center #444;
+}
+
+.trunkstore_popup.failover .buttons > button:last-child {
+    margin-right: 17px;
+}
+
+.trunkstore_popup.failover h2 {
+    margin-left: 20px;
+}
+
+.trunkstore_popup.failover .radio_block {
+    padding: 20px;
+}
+
+.trunkstore_popup.failover .radio_block .inline_field {
+    display: block;
+    margin: 10px 10px 10px 10px;
+    font-size: 16px;
+    line-height: 32px;
+}
+
+
+.trunkstore_popup.failover .radio_block .inline_field input {
+    vertical-align: middle;
+    font-size: 16px;
+    margin-left: 15px;
 }
 
 /* e911 POPUP */
-.e911 form > div:not(:last-child) {
-    margin: 20px 0 20px 0;
+.trunkstore_popup.e911 form {
+    margin-bottom: 10px;
 }
 
-.e911 form{
-    margin-bottom: 0;
+.trunkstore_popup.e911 .split_div {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.trunkstore_popup.e911 .split_div .left_part {
+    float: left;
+    text-align: right;
+}
+
+.trunkstore_popup.e911 .split_div .right_part {
+    width: 100px;
+    float: left;
+    margin-left: 15px;
+    text-align: center;
+}
+
+.trunkstore_popup.e911 .split_div .right_part .e911_image {
+    background: url('images/e911_image.png') no-repeat center;
+    width: 100px;
+    height: 193px;
+    margin-bottom: 10px;
+}
+
+.trunkstore_popup.e911 .split_div .left_part .inline_field:first-child {
+    margin-top: 0px;
+}
+
+.trunkstore_popup.e911 .split_div .left_part .inline_field {
+    margin-top: 20px;
+}
+
+.trunkstore_popup.e911 .split_div .left_part .inline_field input {
+    height: 24px;
+}
+
+.trunkstore_popup.e911 .e911_text {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 30px;
+    margin-left: 10px;
+    text-align: left;
+    padding-bottom: 10px;
+}
+
+.trunkstore_popup.e911 .e911_text .big_blue_text {
+    color: #05addc;
+    font-size: 32px;
 }
 
 /* CNAM POPUP */
-.cnam form{
+.trunkstore_popup.cnam form {
     margin-bottom: 0;
+}
+
+.trunkstore_popup.cnam .right_form .caller_id_text {
+    font-weight: bold;
+    font-size: 16px;
+    margin: 40px 10px;
+    line-height: 40px;
+}
+
+.trunkstore_popup.cnam .right_form .buttons {
+    margin: 5px;
+}
+
+.trunkstore_popup.cnam .inline_field label {
+    font-size: 16px;
+}
+
+.trunkstore_popup.cnam .left_image {
+    background: url('images/cid_phone.jpg') center no-repeat;
+    float: left;
+    width: 152px;
+    height: 290px;
+    margin-right: 20px;
+}
+
+.trunkstore_popup.cnam .right_form {
+    float: left;
+    width: 400px;
+}
+
+.trunkstore_popup.cnam .custom .help_text {
+    width: 90%;
+    margin-left: 7px;
+}
+
+.trunkstore_popup.cnam .custom .wrapper_icon {
+    margin-left: 3px;
 }
