--- a/endpoints/css/style.css
+++ b/endpoints/css/style.css
@@ -27,6 +27,11 @@
     margin-top: 10px;
 }
 
+#edit_server .block .field label {
+    width: 160px;
+    text-align: left;
+}
+
 #edit_server .title {
     font-size: 20px;
     font-weight: bold;
